# backtest-platform

./: .dependency-cruiser.config.mjs  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CODE_SIMPLIFICATION_PLAN.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.distroless  Dockerfile.frontend  LICENSE  Makefile  NOTICE  README.md  _w.py  coverage-output.txt  docker-compose.override.yml  docker-compose.yml  eslint.config.js  index.html  inspection-task1-code-quality.md  inspection-task10-config-build.md  inspection-task2-architecture.md  inspection-task3-test-quality.md  inspection-task4-security.md  inspection-task5-performance.md  inspection-task6-dependencies.md  inspection-task7-documentation.md  inspection-task8-observability.md  inspection-task9-database.md  nodemon.json  package-lock.json  (+20 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.husky/: pre-commit
api/: app.ts  server.ts  tracing.ts
data-fetcher/: .golangci.yml  Dockerfile  auth.go  auth_test.go  baostock.go  config.go  go.mod  go.sum  handlers.go  handlers_baostock.go  handlers_data.go  main.go  main_test.go  middleware.go  providers.go  store.go
docs/: ARCHITECTURE.md  PR-CODE-SIMPLIFICATION.md  application-layer-contract.md  benchmarks.md  branch-protection.md  capacity-planning.md  (+12 more)
engine-rs/: Cargo.toml  Dockerfile  build.bat
engine-rs/src/: analysis.rs  engine.rs  lib.rs  main.rs  monte_carlo.rs  optimizer.rs
engine-rs/tests/: engine_tests.rs
(+920 files in other folders)
