[package]
name = "engine-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.10"
nalgebra = "0.33"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# 企业理由：OpenTelemetry 是可观测性事实标准，跨服务 traceparent 传播
# 使 Node.js → Go → Rust 全链路追踪成为可能。无此传播时，
# 各服务日志无法关联，跨服务排障需人工比对时间戳，效率极低。
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.29"
tracing-opentelemetry = "0.30"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
lto = true
opt-level = 3
